考勤、行为详情页修改

--- a/wisdomCampus/html/studentManage/student-action-add.html
+++ b/wisdomCampus/html/studentManage/student-action-add.html
@@ -469,7 +469,7 @@
 				mui('.mui-scroll-wrapper').scroll()
 			});
 			
-			//将考勤类型、考勤细项的值对应
+			//将类型、细项的值对应
 			var setAttendanceType = function(){
 				for (var i = 0; i < talkTitle.actionDetail.qb.length; i++) {
 					var tempModel = talkTitle.actionDetail.qb[i];
