--- a/wisdomCampus/html/studentManage/student-talkRecord.html
+++ b/wisdomCampus/html/studentManage/student-talkRecord.html
@@ -299,7 +299,7 @@
 					console.log('3.1.教师谈话首页列表:' + JSON.stringify(data));
 					if(data.RspCode == 0) {
 						//总页数
-						totalPageCount = data.RspData.totalRow;
+						totalPageCount = data.RspData.totalPage;
 						pageIndex++;
 						if(flagRef == 0) { //刷新
 							studentMP.setGrdNameClsName(selectTitle.list,data.RspData.list,function(array){
