--- a/wisdomCampus/html/studentManage/student-attendanceDetail.html
+++ b/wisdomCampus/html/studentManage/student-attendanceDetail.html
@@ -196,7 +196,7 @@
 							</div>
 						</a>
 					</li>
-					<p class="lineCell"></p>
+					<p v-if="attendanceDetail.quantizationAttendanceId==12" class="lineCell"></p>
 					<li class="mui-table-view-cell" style="margin-top: -10px;" v-if="attendanceDetail.quantizationAttendanceId==12">
 						<a>
 							<p class="mui-pull-right liDetail">{{attendanceDetail.permision}}</p>
