--- a/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
+++ b/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
@@ -205,7 +205,7 @@
 					<p  style="float: right;">{{sb.recorder}}</p>
 				</div>
 				<div style="background-color: #f2f3f5;height: 10px;"></div>
-				<div :style="{visibility: isEdit=='hide'? 'hidden' : 'initial' }">
+				<div :style="{display: isEdit=='hide'? 'none' : 'inherit'}">
 					<div class="mui-row title-body" style="font-size: 15px;color: #333;">
 						<span class="body-title" >谈话内容</span>
 					</div>
